reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__defs__eat.rs_line_132_col_5_001.log

*** crates/tracewake-core/src/actions/defs/eat.rs:132:5: replace eat_need_events -> Vec<EventEnvelope> with vec![Default::default()]

*** mutation diff:
--- crates/tracewake-core/src/actions/defs/eat.rs
+++ replace eat_need_events -> Vec<EventEnvelope> with vec![Default::default()]
@@ -124,53 +124,17 @@
 fn eat_need_events(
     agent_state: &AgentState,
     proposal: &Proposal,
     ordering_key: &OrderingKey,
     content_manifest_id: &ContentManifestId,
     consumed_event: &EventEnvelope,
     delta: i32,
 ) -> Vec<EventEnvelope> {
-    let actor_id = proposal.actor_id.as_ref().expect("actor checked");
-    let current_hunger = agent_state
-        .needs_by_actor
-        .get(actor_id)
-        .and_then(|needs| needs.get(&NeedKind::Hunger))
-        .map(crate::agent::NeedState::value);
-    build_need_delta_and_threshold_events(
-        NeedDeltaEventSpec {
-            event_id: EventId::new(format!(
-                "event.eat_hunger_delta.{}",
-                proposal.proposal_id.as_str()
-            ))
-            .unwrap(),
-            threshold_event_id: EventId::new(format!(
-                "event.eat_hunger_threshold.{}",
-                proposal.proposal_id.as_str()
-            ))
-            .unwrap(),
-            tick: proposal.requested_tick,
-            ordering_key: ordering_key.clone(),
-            content_manifest_id: content_manifest_id.clone(),
-            causes: vec![EventCause::Event(consumed_event.event_id.clone())],
-            actor_id: actor_id.clone(),
-            proposal_id: Some(proposal.proposal_id.clone()),
-            process_id: None,
-            participants: vec![actor_id.to_string()],
-            need_kind: NeedKind::Hunger,
-            delta,
-            elapsed_ticks: 0,
-            cause_kind: "action_effect".to_string(),
-            cause_action_id: Some("eat".to_string()),
-            extra_payload: vec![PayloadField::new("schema_version", EVENT_SCHEMA_V1)],
-            delta_effects_summary: "hunger reduced by modeled food consumption".to_string(),
-            threshold_effects_summary: "hunger pressure band crossed after eating".to_string(),
-        },
-        current_hunger,
-    )
+    vec![Default::default()] /* ~ changed by cargo-mutants ~ */
 }
 
 fn eat_failed_event(
     proposal: &Proposal,
     ordering_key: &OrderingKey,
     content_manifest_id: &ContentManifestId,
     food_supply_id: &str,
     blocker_kind: &str,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/actions/defs/eat.rs` has changed (1781911464.763924019s, 3s after last build at 1781911461.691924079s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused imports: `NeedDeltaEventSpec` and `build_need_delta_and_threshold_events`
 --> crates/tracewake-core/src/actions/defs/eat.rs:2:5
  |
2 |     build_need_delta_and_threshold_events, NeedDeltaEventSpec,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::agent::NeedKind`
 --> crates/tracewake-core/src/actions/defs/eat.rs:8:5
  |
8 | use crate::agent::NeedKind;
  |     ^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/eat.rs:132:10
    |
132 |     vec![Default::default()] /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 2 warnings
error: could not compile `tracewake-core` (lib) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/eat.rs:132:10
    |
132 |     vec![Default::default()] /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

warning: `tracewake-core` (lib test) generated 1 warning (1 duplicate)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
